# pluraldo

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  SCHEMA.md  pyproject.toml
.github/workflows/: push.yml  python-publish.yml
src/pluraldo/: __init__.py  __main__.py  mimestore.py  pstore.py
src/pluraldo/tui/: task.py  task.tcss
